--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "eslint": "eslint *.js lib/*",
-    "pretest": "npm run eslint",
+    "pretest": "eslint *.js lib/*",
     "test": "jest --coverage --detectOpenHandles"
   },
   "bin": {
@@ -23,6 +22,7 @@
   },
   "homepage": "https://github.com/miluskagonzalez/lim20181-Track-FE-markdown-list#readme",
   "dependencies": {
+    "chalk": "^2.4.1",
     "fs-extra": "^7.0.0",
     "get-md-links": "^0.1.0",
     "node-fetch": "^2.2.0"
