--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@miluskagonzalez/md-links",
   "version": "1.0.0",
   "description": "Herramienta que lee y analiza archivos Markdown para verficar los links contenidos y reportar estadísticas",
-  "author": "Miluska Gonzalez",
+  "author": "Miluska González",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
