--- a/package.json
+++ b/package.json
@@ -16,7 +16,36 @@
     "type": "git",
     "url": "git+https://github.com/miluskagonzalez/lim20181-Track-FE-markdown-list.git"
   },
-  "keywords": [],
+  "keywords": [
+    "markdown",
+    "md",
+    "links",
+    "href",
+    "title",
+    "text",
+    "status",
+    "statusText",
+    "md-links",
+    "file",
+    "files",
+    "dir",
+    "directory",
+    "filesystem",
+    "file-system",
+    "article",
+    "extract",
+    "get",
+    "url",
+    "urls",
+    "http",
+    "validate",
+    "validation",
+    "http request",
+    "cli",
+    "cli-app",
+    "bin",
+    "promise"
+  ],
   "bugs": {
     "url": "https://github.com/miluskagonzalez/lim20181-Track-FE-markdown-list/issues"
   },
